Closed
Bug 220516
Opened 22 years ago
Closed 22 years ago
[FIX]crash in sort by speed [@ XULSortServiceImpl::Sort]
Categories
(Core :: XUL, defect, P1)
Core
XUL
Tracking
()
RESOLVED
FIXED
mozilla1.6alpha
People
(Reporter: difiado-lastpass, Assigned: bzbarsky)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.38 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6a) Gecko/20030927
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6a) Gecko/20030927
when I use sort by speed, with no download in progress, mozilla crash
Reproducible: Always
Steps to Reproduce:
1.no download in progress
2.Tools > Donload manager
3.sort by speed
4.mozilla crash
Actual Results:
crash
Expected Results:
don't crash
build id: 2003092704
MOZILLA causou uma falha de página inválida no
módulo GKLAYOUT.DLL em 015f:615873ea.
Registros:
EAX=00000000 CS=015f EIP=615873ea EFLGS=00010246
EBX=ffffffff SS=0167 ESP=0065e43c EBP=0065e458
ECX=0226a040 DS=0167 ESI=00000000 FS=24ff
EDX=0185bc3c ES=0167 EDI=0185a740 GS=0000
Bytes em CS:EIP:
8b 06 ff 90 9c 00 00 00 85 c0 74 6e 8b 45 fc 83
Esvaziamento da pilha:
00000000 00000010 61634914 00000000 80000000 02219420 006eb45c 0065e724 61588580
0226a040 0065e6b8 00000000 0065e78c 0065e904 00747619 61da4758
Comment 1•22 years ago
|
||
Seems to be a duplicate of bug 220464.
| Assignee | ||
Comment 2•22 years ago
|
||
Actually, it's not. This is a crash in the XUL sort service introduced by jst's
checkin. Basic problem is that a PRUint32 is always >= 0, so some for loops run
off ends of arrays....
Assignee: blake → hyatt
Status: UNCONFIRMED → NEW
Component: Download Manager → XP Toolkit/Widgets: XUL
Ever confirmed: true
OS: Windows 98 → All
QA Contact: petersen → shrir
Hardware: PC → All
| Assignee | ||
Comment 3•22 years ago
|
||
Taking. If anyone cares, btw, the crash stack is:
XULSortServiceImpl::Sort(nsIDOMNode*, nsAString const&, nsAString
const&)+0x000011B0
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/components/libgklayout.so
+0x0094386C]
XPTC_InvokeByIndex+0x00000029
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/libxpcom.so +0x0013C399]
XPCWrappedNative::CallMethod(XPCCallContext&,
XPCWrappedNative::CallMode)+0x00001148
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/components/libxpconnect.so
+0x0008C862]
XPC_WN_CallMethod(JSContext*, JSObject*, unsigned, long*, long*)+0x000001A5
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/components/libxpconnect.so
+0x00096B11]
js_Invoke+0x00000C9E
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/libmozjs.so +0x00049192]
js_Interpret+0x0000CA8F
[/home/bzbarsky/mozilla/debug/obj-debug/dist/bin/libmozjs.so +0x000570A3]
Assignee: hyatt → bzbarsky
Priority: -- → P1
Summary: crash in sort by speed → [FIX]crash in sort by speed
Target Milestone: --- → mozilla1.6alpha
| Assignee | ||
Comment 4•22 years ago
|
||
*** Bug 220521 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 5•22 years ago
|
||
Attachment #132291 -
Flags: superreview+
Attachment #132291 -
Flags: review+
Updated•22 years ago
|
Keywords: crash
Summary: [FIX]crash in sort by speed → [FIX]crash in sort by speed [@ XULSortServiceImpl::Sort]
| Assignee | ||
Comment 6•22 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
Updated•15 years ago
|
Crash Signature: [@ XULSortServiceImpl::Sort]
You need to log in
before you can comment on or make changes to this bug.
Description
•