Fix crash in XUL sort service -- unsigned ints are never less than 0...  Bug 220516, r+sr=dbaron